# OS-documents

./: sched.c
File operation commands on linux/: file_operation_commands.txt
Lab1/: A1.txt  A3.txt
Lab1/lab1/: Makefile  check  check.c  hello  run_long  run_long.c  sth.h
Lab1/lab1/1952785/: example.tx  history.txt
Lab1/lab1/ex4/: Makefile  input.txt  process  process.c  sth
Lab1/lab1/problem1/: factorial.c  factorial.h  readline.c
Lab2/: QA.txt
Test_program/: Makefile  countter.c  countter.h  sth  sth.c  test_program  test_program.c
assignment/: Makefile  log.txt  log1.txt  log2.txt  mem  os
assignment/include/: common.h  mem.h
assignment/input/: os_2
assignment/input/proc/: p3
assignment/source_code/: CMakeLists.txt  Makefile
assignment/src/: cpu.c  mem.c  os.c  paging.c  queue.c  sched.c  timer.c
lab1/: hello.c  sth.c
lab1/problem1/: Makefile  main  main.c  readline.h
lab2/problem1/: Makefile  ex1.c  ex1.h  main  main.c
lab2/problem2/: Makefile  multi  pi_multi_thread.c  pi_serial  pi_serial.c  serial
lab2/problem3/: Makefile  code  code.c
lab3/problem1/: possible_cases.txt  sudo_code.txt
lab3/problem2/: Makefile  conclusion2.txt  cond_usg  cond_usg.c  count_mutex_threshold.txt  no_synch  no_synch.c
lab3/problem3/: Makefile  comparation.txt  mutex  mutex.c  semaphore  semaphore.c
lab4/lab4_mem/best_fit/: main.c  mem  mem.c
lab4/lab4_mem/worst_fit/: main.c  mem  mem.c
source_code/: mem  os
source_code/src/: cpu.c  loader.c  mem.c
test_field/: Makefile  hello  hello_world.c  hello_world.h  sth.c  sth.h  sth2  sth2.c
(+8 files in other folders)
